--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ dump.json
 /.#main.go
 /img/*
 /testgen.exe
+/sample/000055.png
+/sample/0000aa.png
+/sample/0000ff.png
+/sample/005500.png
+/sample/*
